[210503] 프로젝트 구조 변경  - Dependency Injection 제거  - 프로젝트 소스 구조 변경
